Changed font size from 16 to 14px on Sky and Red Devil themes to fix text from not fitting into the buttons

--- a/src/Application/css/jfx9be/sky.css
+++ b/src/Application/css/jfx9be/sky.css
@@ -5,7 +5,7 @@
  * 
  */
 .root {
-    -fx-font-size: 16px;
+    -fx-font-size: 14px;
     -fx-background: sky-blue;
     -fx-base: rgb(250, 250, 250);
     -fx-focus-color: derive( sky-blue , 90% );
